--- a/react-app/package.json
+++ b/react-app/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://snacc.herokuapp.com/"
+  "proxy": "https://snacc.herokuapp.com"
 }
